# object-in-bag-detection

./: .gitignore  AGENTS.md  README.md
backend/: main.py  pyproject.toml  red_frame_crossing_tracker.py  red_tracking_utils.py  screen_capture_tracker.py  websocket_server.py
frontend/app/: page.tsx
